<resources>
    <string name="app_name">Ai Bank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account_successfully_activated">Account Successfully Activated</string>
    <string name="continue_to_log_in_page">Continue To Log In Page</string>
    <string name="continue_to_your_account">Continue To Your Account</string>
    <string name="enter_your_code_here">Enter your code here</string>
    <string name="code_will_be_sent_on">Code will be sent on</string>
    <string name="verification">Verification</string>
    <string name="new_account">New Account</string>
    <string name="account_name">Account name</string>
    <string name="enter_your_account_name">* Enter your account name</string>
    <string name="email">Email</string>
    <string name="_enter_your_email">* Enter your Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="_repeat_your_password">* Repeat your password</string>
    <string name="_enter_your_phone_number">* Enter your phone number</string>
    <string name="one_time_code">One Time Code</string>
    <string name="_enter_your_code">* Enter your code</string>
    <string name="sms">SMS</string>
    <string name="terms_and_conditions">I confirm that I have read and agree to the Terms and Conditions, Exchange Terms and Privacy Policy</string>
    <string name="star">*</string>
    <string name="create_account">Create Account</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="please_check_all_fields_requirements">Please check all fields requirements</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="all_currencies">ALL CURRENCIES</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="gel">GEL</string>
    <string name="_0_00">0.00</string>
    <string name="usd">USD</string>
    <string name="us_dollar">US Dollar</string>
    <string name="_0_000">0.000</string>
    <string name="enter_your_password">* Enter your password</string>
    <string name="phone_number_format_995">Phone number (Format 995*********)</string>
    <string name="markets">Markets</string>
    <string name="search">Search By Id</string>
    <string name="market_cap">Market Cap</string>
    <string name="h_24">H 24</string>
    <string name="l_24">L 24</string>
    <string name="_24">% 24</string>
    <string name="ath">ATH</string>
    <string name="atl">ATL</string>
    <string name="dollar">$</string>
</resources>